--- a/app/src/main/res/layout/layout_screen.xml
+++ b/app/src/main/res/layout/layout_screen.xml
@@ -44,7 +44,7 @@
             android:id="@+id/intro_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/money"
+            android:src="@drawable/tracking"
             android:layout_marginTop="25dp"
             />
 
